Buttons tweaks and fix dark mode chrome

--- a/theme/shared/browser/browser.css
+++ b/theme/shared/browser/browser.css
@@ -29,12 +29,14 @@
 /* ::::: Colors ::::: */
 
 :root {
-  --toolbar-background: #f4f4f4;
+  --toolbar-background: #fff;
   --toolbar-border-color: #a1a1a1;
 
   --tab-hover-background-color: rgba(232,232,231,0.25);
+  --tab-hover-border-color: rgba(182,182,179,0.3);
   --tab-hover-bottom-line-color: rgb(182,182,179);
   --tab-selected-background-color: rgba(232,232,231,0.5);
+  --tab-selected-border-color: rgba(182,182,179,0.5);
   --tab-selected-bottom-line-color: Highlight;
   --tab-selected-hover-background-color: rgba(232,232,231,0.7);
 
@@ -43,12 +45,15 @@
 
 toolbar[brighttext] {
   --toolbar-background: #393f3f;
-  --toolbar-border-color: #1c1f1f;
+  --toolbar-border-color: #0b0c0c;
 
-  --tab-hover-background-color: #313636;
-  --tab-hover-bottom-line-color: #1c1f1f;
-  --tab-selected-background-color: #343939;
-  --tab-selected-bottom-line-color: #215d9c;
+  --tab-hover-background-color: rgba(51,57,59,0.2);
+  --tab-hover-border-color: rgba(27,31,32,0.3);
+  --tab-hover-bottom-line-color: rgb(27,31,32);
+  --tab-selected-background-color: rgba(51,57,59,0.5);
+  --tab-selected-border-color: rgba(27,31,32,0.5);
+  --tab-selected-bottom-line-color: rgb(33,93,156);
+  --tab-selected-hover-background-color: rgba(51,57,59,0.7);
 }
 
 #main-window[privatebrowsingmode=temporary] {
@@ -146,10 +151,17 @@ toolbar[brighttext] {
   background-color: rgb(239,239,239);
 }
 
+#navigator-toolbox > toolbar[brighttext]:not(#toolbar-menubar):not(#TabsToolbar):not(#PersonalToolbar) {
+  background-color: rgb(42,46,48);
+}
+
 #main-window[htitlemode] #navigator-toolbox > toolbar:not(:-moz-lwtheme):not(#toolbar-menubar):not(#TabsToolbar):not(#PersonalToolbar) {
   /* GNOME 3.20 Titlebar */
   background-image: linear-gradient(to top, rgb(212,212,210), rgb(239,239,239) 2px, rgb(244,244,244) 3px);
-  box-shadow: inset 0 1px rgba(255, 255, 255, 0.8);
+}
+
+#main-window[htitlemode] #navigator-toolbox > toolbar[brighttext]:not(#toolbar-menubar):not(#TabsToolbar):not(#PersonalToolbar) {
+  background-image: linear-gradient(to top, rgb(37,41,43), rgb(42,46,48) 2px, rgb(44,49,51) 3px);
 }
 
 #navigator-toolbox > toolbar:not(#toolbar-menubar):not(#TabsToolbar):not(#nav-bar) {
@@ -1149,15 +1161,6 @@ toolbar[brighttext] :-moz-any(#window-controls, .window-controls) {
   list-style-image: url(chrome://symbolic-icons/skin/close.svg);
 }
 
-:-moz-any(#minimize-button, #restore-button, #fullscreen-leave-button, #close-button) > .toolbarbutton-icon {
-  opacity: .8;
-}
-
-:-moz-any(#minimize-button, #restore-button, #fullscreen-leave-button, #close-button):active:hover > .toolbarbutton-icon {
-  filter: url(chrome://browser/skin/symbolic-icons-colors.svg#white);
-  opacity: 1;
-}
-
 /* Show/hide buttons */
 
 #minimize-button,
@@ -1201,9 +1204,8 @@ toolbar[brighttext] :-moz-any(#window-controls, .window-controls) {
 
 toolbar[brighttext] #urlbar,
 toolbar[brighttext] .searchbar-textbox {
-  background: transparent;
-  background-image: linear-graident(rgb(29,32,32), rgb(36,37,37) 3px, rgb(41,41,41) 90%)
-  border-color: rgb(28,31,31);
+  background: rgb(35,39,41);
+  border-color: rgb(27,31,32);
   box-shadow: 0 0 0 1px rgba(33,93,156,0) inset;
   color: #fff;
 }
@@ -2639,6 +2641,8 @@ toolbar[brighttext] .urlbar-history-dropmarker:not(:hover) {
   -moz-box-flex: 1;
   background-clip: padding-box;
   margin: 0;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
   border-bottom: 3px solid transparent;
 }
 
@@ -2652,14 +2656,16 @@ toolbar[brighttext] .urlbar-history-dropmarker:not(:hover) {
 
 .tabbrowser-tab:hover .tab-background-middle {
   background: var(--tab-hover-background-color);
+  -moz-border-left-colors: var(--tab-hover-border-color);
+  -moz-border-right-colors: var(--tab-hover-border-color);
   -moz-border-bottom-colors: var(--tab-hover-bottom-line-color);
 }
 
 .tabbrowser-tab[visuallyselected=true] .tab-background-middle {
   background: var(--tab-selected-background-color);
+  -moz-border-left-colors: var(--tab-selected-border-color);
+  -moz-border-right-colors: var(--tab-selected-border-color);
   -moz-border-bottom-colors: var(--tab-selected-bottom-line-color);
-  border-left: 1px solid rgba(182, 182, 179, 0.5);
-  border-right: 1px solid rgba(182, 182, 179, 0.5);
 }
 
 .tabbrowser-tab[visuallyselected=true]:hover .tab-background-middle {
@@ -3019,7 +3025,7 @@ toolbar[brighttext] .urlbar-history-dropmarker:not(:hover) {
   https://drafts.csswg.org/css-backgrounds/#background-image
   background-image: linear-gradient(rgb(247,247,247),rgb(232,232,231) 60%,rgb(222,222,221));
   */
-  background: rgb(240,240,240);
+  background: rgb(247,247,247);
   border-color: rgb(182,182,179) rgb(182,182,179) rgb(145,145,140);
   box-shadow: 0 1px rgb(255,255,255) inset;
   transition-property: all;
@@ -3034,6 +3040,18 @@ toolbar[brighttext] .urlbar-history-dropmarker:not(:hover) {
   transition-property: all;
   transition-duration: 0.2s;
   transition-timing-function: cubic-bezier(0.25,0.46,0.45,0.94);
+}
+
+#TabsToolbar[brighttext] .tab-close-button:hover {
+  background: rgb(53,60,62);
+  border-color: rgb(27,31,32) rgb(27,31,32) rgb(11,12,12);
+  box-shadow: 0 1px rgba(255,255,255,0.05) inset;
+}
+
+#TabsToolbar[brighttext] .tab-close-button:active:hover {
+  background: rgb(37,41,43);
+  border-color: rgb(27,31,32);
+  box-shadow: none;
 }
 
 #TabsToolbar .tab-close-button > .toolbarbutton-icon {
@@ -3072,8 +3090,7 @@ toolbar[brighttext] .urlbar-history-dropmarker:not(:hover) {
 #TabsToolbar[brighttext] .tabs-newtab-button,
 #TabsToolbar[brighttext] > #new-tab-button,
 #TabsToolbar[brighttext] > toolbarpaletteitem > #new-tab-button {
-  /* FIXME */
-  list-style-image: url(chrome://browser/skin/tabbrowser/newtab-inverted.svg);
+  fill: white;
 }
 
 .tabs-newtab-button {
